// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with 1 expense 1`] = `
<div>
  <h2>
     Viewing 
    1
     
    expense
     totalling 
    $0.00
  </h2>
</div>
`;

exports[`should correctly render ExpenseSummary with multiple expenses 1`] = `
<div>
  <h2>
     Viewing 
    23
     
    expenses
     totalling 
    $0.00
  </h2>
</div>
`;
